--- a/assets/assets/test.html
+++ b/assets/assets/test.html
@@ -29,7 +29,7 @@
         }
 	</style>
 
-	<script src="assets/abcjs-basic.js" type="text/javascript"></script>
+	<script src="assets/assets/abcjs-basic.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		var abc = "T: Cooley's\n" +
 			"M: 4/4\n" +
