--- a/assets/assets/test.html
+++ b/assets/assets/test.html
@@ -29,23 +29,15 @@
         }
 	</style>
 
-	<script src="assets/assets/abcjs-basic.js" type="text/javascript"></script>
+	<script src="https://cdn.jsdelivr.net/npm/abcjs@6.0.0-beta.33/dist/abcjs-basic.js" type="text/javascript"></script>
 	<script type="text/javascript">
-		var abc = "T: Cooley's\n" +
-			"M: 4/4\n" +
-			"L: 1/8\n" +
-			"R: reel\n" +
-			"K: Emin\n" +
-			"|:D2|EB{c}BA B2 EB|~B2 AB dBAG|FDAD BDAD|FDAD dAFD|\n" +
-			"EBBA B2 EB|B2 AB defg|afe^c dBAF|DEFD E2:|\n" +
-			"|:gf|eB B2 efge|eB B2 gedB|A2 FA DAFA|A2 FA defg|\n" +
-			"eB B2 eBgB|eB B2 defg|afe^c dBAF|DEFD E2:|";
 
 		function load() {
 			// First draw the music - this supplies an object that has a lot of information about how to create the synth.
 			// NOTE: If you want just the sound without showing the music, use "*" instead of "paper" in the renderAbc call.
-			var visualObj = ABCJS.renderAbc("paper", abc, {
-				responsive: "resize" })[0];
+
+			//var visualObj = ABCJS.renderAbc("paper", abc, {responsive: "resize" })[0];
+			new ABCJS.Editor("abc", { canvas_id: "paper",warnings_id: "warnings",abcjsParams: {} });
 
 			// This object is the class that will contain the buffer
 			var midiBuffer;
@@ -125,6 +117,21 @@
 		<h1>Basic Synth</h1>
 	</header>
 	<div class="container">
+		<textarea id="abc" cols="80" rows="12" spellcheck="false">
+X: 1
+T: Cooley's
+M: 4/4
+L: 1/8
+R: reel
+K: Emin
+|:D2|EB{c}BA B2 EB|~B2 AB dBAG|FDAD BDAD|FDAD dAFD|
+EBBA B2 EB|B2 AB defg|afe^c dBAF|DEFD E2:|
+|:gf|eB B2 efge|eB B2 gedB|A2 FA DAFA|A2 FA defg|
+eB B2 eBgB|eB B2 defg|afe^c dBAF|DEFD E2:|
+    </textarea>
+
+		<div id="warnings"></div>
+		<hr>
 		<div id="paper"></div>
 		<p class="suspend-explanation">Browsers won't allow audio to work unless the audio is started in response to a
 			user action. This prevents auto-playing web sites. Therefore, the
